--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -209,15 +209,17 @@ Therefore, at high solar radiation loads, leaves can maintain $T_{leaf}$ closer 
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater tendency for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
 However, higher wind speeds (e.g., ~ 4 m s^-1^; Fig. `r fig_NEON_vertical`) can reduce $T_{leaf}-T_{air}$ to ~ $4^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher wind speed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_b$ and $g_s$ (reviewed below) mediate the direct effects of solar radiation on upper canopy leaves (Fig. `r fig_leaf_T`a) and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). In contrast, greater RH and lower wind speeds in the understory may limit $\lambda E$ (through reduced $g_s$ and $g_b$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
 
-**Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).**
-Closed canopies with high LAI act as an parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. In contrast to closed canopies, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. The latter can result from the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
-
-**Within closed-canopy forests vertical gradients, the propensity for $T_{leaf}$ to be elevated above $T_{air}$ varies with micrometeorological conditions (Fig. `r fig_leaf_T`).**
 Under drought conditions (hot and dry, with higher-than-average solar radiation), when $g_s$ is limiting, there will be a propensity for $T_{leaf} - T_{air}$ to be elevated in the canopy compared to the understory (Fig.`r fig_leaf_T`).
 Because sun leaves are exposed to higher irradiance and VPD, their $g_s$-limitation is steeper than shade leaves, resulting in greater increases in $T_{leaf}$ when $g_s$ is reduced [Fig. `r fig_leaf_T`e, @leighInfluenceLeafSize2017; @fauset_differences_2018]. 
 In contrast, under hot and wet conditions, higher wind speeds and $g_b$ enable cooling. Under lower wind conditions, however,  lower $g_b$ increases $T_{leaf} - T_{air}$ [Fig. `r fig_leaf_T`b, @martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]. 
-Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is not conducive to shedding excess heat, which in combination with their physiological propensities can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
+Thus, while understory and within-canopy shade leaves can remain cooler under lower radiation, their environment is not conducive to shedding excess heat, which in combination with their physiological propensities can result in greater $T_{leaf}$ under slight heat or drought stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020; @schymanskiStomatalControlLeaf2013b; @zweifelMiddayStomatalClosure2002].
  In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the understory (Fig. `r fig_NEON_vertical`) would also inhibit cooling, as $\lambda E$ is stifled under high RH, resulting in  greater $T_{leaf}$-$T_{air}$ [Fig. `r fig_leaf_T`c, @songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts2021].
+
+**Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).**
+Closed canopies with high LAI act as an parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. 
+In contrast to closed canopies, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
+This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. 
+The latter can result from the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
 
 
 **Following the principles outlined above, vertical microclimate profiles, leaf traits, and $g_s$ together explain *in situ* $T_{leaf}$ observations.** 
