--- a/vertical-thermal-review_SI.Rmd
+++ b/vertical-thermal-review_SI.Rmd
@@ -78,18 +78,16 @@ Thus, vegetation temperature ($T_{veg}$) does not always equal or approximate $T
 
 #  `r appendix_tealeaves_methods_title`
 
-Energy balance for a typical overstory sun leaf and understory shade leaf were modeled in the R package *Tleaves* [@muir_tealeaves_2019], parameterized for *Quercus rubra* L. leaves at Harvard Forest, MA, USA (42.5369, -72.17266).
+Energy balance for a typical overstory sun leaf and understory shade leaf were modeled in the R package *tealeaves* [@muir_tealeaves_2019], parameterized for *Quercus rubra* L. leaves at Harvard Forest, MA, USA (42.5369, -72.17266).
 
-*Describe where you came up with all the parameters:*
-
-Micrometeorological data from Harvard NEON was used to parameterize biophysical constants, using the mean oof maximum PAR, wind speed, and $T_{air}$ (Fig.3) for growing season months at vertical positions 60m (overstory) and 10m (understory). 
+Micrometeorological data from the NEON tower at Harvard Forest (Fig. `r fig_NEON_vertical`, Supporting Information Methods `r appendix_NEON_methods`) was used to parameterize biophysical constants, using the mean of maximum PAR, wind speed, and $T_{air}$ for growing season months at vertical positions 60m (overstory) and 10m (understory). 
 Leaf size parameters were selected for *Quercus rubra* sun and shade leaf based on personal observations (by Vinod) and verified as reasonable by @zwienieckiHydraulicLimitationsImposed2004. 
 
-For the humid scenario, we used mean maximum RH.
+For the humid scenario, we used mean maximum RH from the NEON tower at Harvard Forest.
 Stomatal conductance measurements were referred from *Tleaves* typical sun and shade measurements [@muir_tealeaves_2019] and @cavender-baresChangesDroughtResponse2000. 
 
-For the drought scenario, we reduced RH to 50% of the mean maximum.
-*For overstory drought PAR values, we used maximum Harvard NEON PAR value at 60m, and for understory drought PAR we used 50% increased PAR of understory normal value.* 
+For the drought scenario, we reduced RH to 50% of the mean maximum from the NEON tower at Harvard Forest.
+For drought PAR values, for the overstory we used the maximum PAR value observed at 60m height on the NEON tower at Harvard Forest, and for the understory we assumed 50% increased PAR relative to the mean daily maximum understory value.
 We reduced stomatal conductance to a minimum value of 0.01 $\mu mol/m^2/s/Pa$ for both overstory and understory. 
 
 In each visual, all biophysical variables are constant except for the independent variable that represents a minimum - maximum range. 
