--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -219,7 +219,7 @@ In addition to lower wind speeds (Fig. `r fig_NEON_vertical`), higher RH in the 
 
 **Nidhi, please integrate the content below into a single paragraph. (I'm not familiar enough with the references do so confidently.)**
 
-**Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).**
+Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).
 Closed canopies with high LAI act as an parasol, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. 
 In contrast to closed canopies, open canopies with lower LAI allow more vertical air mixing and sunlight into the understory. 
 This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. 
@@ -232,7 +232,7 @@ Similarly, in very open forests or savannas, trees growing close to the ground c
 
 ## Leaf traits 
 
-**Leaf traits determine the capacity of leaves to thermoregulate [@michaletzEnergeticCarbonEconomic2016], and as such are critical to optimizing leaf metabolism across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004].**
+Leaf traits shape $T_{leaf}-T_{air}$ [@michaletzEnergeticCarbonEconomic2016] and leaf metabolism across forest vertical strata [@michaletzPlantThermoregulationEnergetics2015; @zwienieckiHydraulicLimitationsImposed2004].
 Leaf morphology adjusts to the previously experienced microenvironment during leaf formation in buds, and also during ongoing leaf expansion [@zwienieckiHydraulicLimitationsImposed2004], and the ratio of far red to red light and associated water demands determines the differentiation of traits of sun and shade leaves [@casasSunShadeLeaves2011; @zwienieckiHydraulicLimitationsImposed2004; @keenanGlobalLeafTrait2016]. 
 This dichotomy in leaves is observed along the vertical gradient where canopy-leaves vary dramatically from canopy-interior and understory due to the differences in biophysical conditions (Fig. `r fig_NEON_vertical`, Supporting Information Figure `r SIfig_NEON_all`). 
 
